add css-modules and postcss

--- a/src/server/views/index.ejs
+++ b/src/server/views/index.ejs
@@ -5,9 +5,10 @@
     <title>Remoto</title>
     <meta name="description" content="Remoto">
     <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
+    <link rel="stylesheet" href="/remoto.css">
   </head>
   <body>
     <div id="remoto"><%- markup -%></div>
-    <script src="/bundle.js"></script>
+    <script src="/remoto.js"></script>
   </body>
 </html>
