--- a/src/server/views/index.ejs
+++ b/src/server/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Remoto</title>
+    <title>/remoto/</title>
     <meta name="description" content="Remoto">
     <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
     <link rel="stylesheet" href="/remoto.css">
