Example of <Jobs> using a <JobListItem>

--- a/src/shared/containers/Layout/Layout.css
+++ b/src/shared/containers/Layout/Layout.css
@@ -6,7 +6,7 @@
 }
 
 .wrapper {
-  background-color: green;
+  padding: var(--offset);
   max-width: var(--content-max-width);
   margin: 0 auto;
 }
