#fix add expor to /job/:id

--- a/src/server/views/index.ejs
+++ b/src/server/views/index.ejs
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="/remoto.css">
   </head>
   <body>
-    <div id="remoto"><%- markup -%></div>
+    <div id="remoto">
+      <div><%- markup -%></div>
+    </div>
     <script src="/remoto.js"></script>
   </body>
 </html>
