#improvement reuse wrapper rules with a variable

--- a/src/shared/components/Header.css
+++ b/src/shared/components/Header.css
@@ -9,9 +9,7 @@
   & .wrapper {
     display: flex;
     align-items: center;
-    /* @TODO: this .wrapper properties have to be inherit from a common */
-    max-width: var(--content-max-width);
-    margin: 0 auto;
+    @apply --wrapper;
   }
 
   & .brand {
