--- a/src/shared/containers/Jobs/Jobs.css
+++ b/src/shared/containers/Jobs/Jobs.css
@@ -8,7 +8,5 @@
 
 .wrapper {
   padding: var(--offset) 0;
-  /* @TODO: this .wrapper properties have to be inherit from a common */
-  max-width: var(--content-max-width);
-  margin: 0 auto;
+  @apply --wrapper;
 }
