--- a/src/shared/components/Header.css
+++ b/src/shared/components/Header.css
@@ -31,6 +31,7 @@
     font-size: var(--font-size-small);
 
     & > * {
+      color: var(--color-text);
       margin-left: var(--offset);
     }
   }
