--- a/src/shared/components/Header.css
+++ b/src/shared/components/Header.css
@@ -25,14 +25,16 @@
   & .navigation {
     flex-grow: 1;
     display: flex;
-    align-items: flex-end;
-    align-content: flex-end;
+    align-items: center;
     justify-content: flex-end;
     font-size: var(--font-size-small);
 
-    & > * {
-      color: var(--color-text);
+    & > *:not(.button) {
       margin-left: var(--offset);
+
+      &:not(button) {
+        color: var(--color-text);
+      }
     }
   }
 }
