--- a/src/server/views/index.ejs
+++ b/src/server/views/index.ejs
@@ -11,6 +11,9 @@
     <div id="remoto">
       <div><%- markup -%></div>
     </div>
+    <script id="store" type="application/json">
+  		<%- JSON.stringify(store) %>
+  	</script>
     <script src="/remoto.js"></script>
   </body>
 </html>
