--- a/src/shared/components/Header.css
+++ b/src/shared/components/Header.css
@@ -7,13 +7,15 @@
 }
 
 .header {
-  &, & .wrapper {
+  &,
+  & .wrapper {
     height: var(--header-height);
   }
 
   & .wrapper {
     display: flex;
     align-items: center;
+
     @apply --wrapper;
   }
 
