--- a/src/shared/styles/variables.css
+++ b/src/shared/styles/variables.css
@@ -1,3 +1,5 @@
+@import './colors';
+
 :root {
   --unit: 1rem;
   --offset: calc(var(--unit) * 1.6);
@@ -5,6 +7,7 @@
 
   /* SIZES */
   --header-height: calc(var(--unit) * 5.6);
+  --aside-width: calc(var(--unit) * 29.3);
   --avatar-size: calc(var(--unit) * 3.2);
   --content-max-width: calc(var(--unit) * 102.4);
 
@@ -38,6 +41,22 @@
   --wrapper: {
     max-width: var(--content-max-width);
     margin: 0 auto;
+  }
+
+  --aside: {
+    margin-left: var(--offset);
+    width: var(--aside-width);
+
+    & > *:not(:last-child) {
+      margin-bottom: var(--offset);
+    }
+  }
+
+  --box: {
+    width: 100%;
+    background-color: white;
+    box-sizing: border-box;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
   }
 }
 
