--- a/src/shared/styles/reset.css
+++ b/src/shared/styles/reset.css
@@ -20,9 +20,12 @@ body {
   color: var(--color-text);
   background-color: var(--color-background-body);
 
-
   & * {
     -webkit-tap-highlight-color: rgba(255, 255, 255, 1);
+  }
+
+  & a {
+    color: var(--color-text);
   }
 
   @media print {
