basic #improvements on #UI

--- a/src/shared/components/Box.css
+++ b/src/shared/components/Box.css
@@ -17,5 +17,9 @@
   & .text {
     padding: var(--offset);
     font-size: var(--font-size-small);
+
+    & ~ .text {
+      padding-top: 0;
+    }
   }
 }
