--- a/src/server/views/index.ejs
+++ b/src/server/views/index.ejs
@@ -11,11 +11,11 @@
     <div id="remoto">
       <div><%- markup -%></div>
     </div>
-
+    <!--
     <script id="store" type="application/json">
-      <%- JSON.stringify(store) %>
+      <%- JSON.stringify(dataSource) %>
     </script>
-    <script src="/remoto.js"></script>
+    <script src="/remoto.js"></script> -->
 
   </body>
 </html>
