--- a/src/shared/styles/fonts.css
+++ b/src/shared/styles/fonts.css
@@ -1,6 +1,6 @@
 :root {
   /* - Font Family - */
-  --preferred-font: 'Helvetica Neue', 'Calibri Light', Roboto, sans-serif;
+  --preferred-font: 'Open Sans', 'Helvetica Neue', 'Calibri Light', Roboto, sans-serif;
   --icon-font: 'Material Icons';
 
   /* - Font Size - */
