--- a/src/server/views/index.ejs
+++ b/src/server/views/index.ejs
@@ -5,17 +5,17 @@
     <title>/remoto/</title>
     <meta name="description" content="Remoto">
     <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
     <link rel="stylesheet" href="/remoto.css">
   </head>
   <body>
     <div id="remoto">
       <div><%- markup -%></div>
     </div>
-    <!--
+
     <script id="store" type="application/json">
       <%- JSON.stringify(dataSource) %>
     </script>
-    <script src="/remoto.js"></script> -->
-
+    <script src="/remoto.js"></script>
   </body>
 </html>
