--- a/src/shared/styles/variables.css
+++ b/src/shared/styles/variables.css
@@ -66,7 +66,7 @@
     height: var(--avatar-size);
     box-shadow: var(--shadow);
     border-radius: calc(var(--unit) * 0.2);
-    background-color: var(--color-divider);
+    background-color: white;
   }
 }
 
