Add pay with stripe

--- a/src/server/views/index.ejs
+++ b/src/server/views/index.ejs
@@ -16,6 +16,7 @@
     <script id="store" type="application/json">
       <%- JSON.stringify(dataSource) %>
     </script>
-    <script src="/remoto.js"></script>
+    <script src="/remoto.js"></script> -->
+
   </body>
 </html>
